# dropout_rate_project

./: README.md  pyproject.toml
data/: dropout_data.csv  dummies_data.csv  dummies_data_01.csv  prepared_data.csv  selected_data_01.csv
notebooks/: NB_01_PREPARED_DATA_DROPOUT_RATE.IPYNB  NB_02_EXPLORATION_DATA.IPYNB  NB_03_TRANSFORMATION_DATA.IPYNB  NB_04_DROPOUT_RATE_TRAINING_AND_VALIDATION.ipynb  NB_04_DROPOUT_RATE_TRAINING_AND_VALIDATION_old.ipynb  NB_05_DROPOUT_RATE_TESTING.IPYNB  NB_05_DROPOUT_RATE_TESTING_old.IPYNB  eda_ydp.html
tests/: 2017_[]_True_False_KNN.txt  2018_[]_False_False_KNN.txt  2018_[]_False_False_XG_Boost.txt  2018_[]_True_False_KNN.txt  2018_[]_True_False_XG_Boost.txt  2019_[]_False_False_KNN.txt  2019_[]_False_False_Support_Vector_Machine.txt  2019_[]_False_False_XG_Boost.txt  2019_[]_True_False_KNN.txt  2019_[]_True_False_Support_Vector_Machine.txt  2019_[]_True_False_XG_Boost.txt  2020_[]_False_False_KNN.txt  2020_[]_False_False_Support_Vector_Machine.txt  2020_[]_False_False_XG_Boost.txt  2020_[]_True_False_KNN.txt  2020_[]_True_False_Support_Vector_Machine.txt  2020_[]_True_False_XG_Boost.txt  2021_[2020]_False_False_KNN.txt  2021_[2020]_False_False_Support_Vector_Machine.txt  2021_[2020]_False_False_XG_Boost.txt  2021_[2020]_True_False_KNN.txt  2021_[2020]_True_False_Support_Vector_Machine.txt  2021_[2020]_True_False_XG_Boost.txt  2021_[]_False_False_KNN.txt  2021_[]_False_False_Support_Vector_Machine.txt  2021_[]_False_False_XG_Boost.txt  2021_[]_True_False_KNN.txt  2021_[]_True_False_Support_Vector_Machine.txt  2022_[]_False_False_KNN.txt  (+140 more)
(+3 files in other folders)
