[tool.poetry]
name = "dropout-rate-project"
version = "0.1.0"
description = ""
authors = ["jtholanda <jtholanda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
sweetviz = "^2.3.1"
numpy = "^2.2.3"
imblearn = "^0.0"
xgboost = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
